load("//bazel:api.bzl", "modular_py_binary", "mojo_test")

package(default_visibility = ["//max:consumers"])

# CPU unit test for the reusable fuzz harness (_fuzz.mojo): boundary-aware shape
# generation and the value-distribution fills (incl. NaN/Inf injection). No GPU.
mojo_test(
    name = "test_fuzz_fills.mojo.test",
    size = "small",
    srcs = [
        "_fuzz.mojo",
        "test_fuzz_fills.mojo",
    ],
    main = "test_fuzz_fills.mojo",
    tags = ["manual"],
    deps = [
        "@mojo//:std",
    ],
)

# Target: matmul _matmul_gpu (tuned SM100 bf16 path; memory-safety oracle).
# N/K are compile-time (`-D N=.. -D K=..`); M is the runtime fuzz axis. B200-only
# (the tuned tensor-core kernel needs SM100 + static N/K + structured_kernels).
mojo_test(
    name = "fuzz_matmul.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_matmul.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_matmul.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = [
        "//:has_gpu",
        "//:b200_gpu",
    ],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "//max:structured_kernels",
        "@mojo//:std",
    ],
)

# Kernel-level fuzzing (see gpu-kernels-fuzzing-design.md).
#
# Slice 0: a seeded, boundary-aware shape generator drives flash_attention with
# a CausalPaddingMask. Run PLAIN, an OOB underflow read (if present) lands inside
# the device pool and is masked; run under the memcheck + pool-off oracle it
# would surface from generated shapes:
#
#   bash max/kernels/test/gpu/compute_sanitizer/run_sanitizer.sh memcheck \
#     //max/kernels/test/gpu/fuzz:fuzz_mha_causal.mojo.test
#
# Tagged `manual` so it stays out of `//...` wildcard CI until a fuzz lane is
# wired up deliberately (Slice 5). Explicit invocation (above) still runs it.
mojo_test(
    name = "fuzz_mha_causal.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_mha_causal.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_mha_causal.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: MHA NullMask (non-causal full attention; memory-safety + ref oracle).
mojo_test(
    name = "fuzz_mha_nullmask.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_mha_nullmask.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_mha_nullmask.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: generic_flare_mla_decode_kv_cache_ragged (ragged paged-KV-cache MLA
# decode -- the DeepSeek/Kimi production decode op). num_heads + mask are
# compile-time (`-D mla_num_heads=128|64|16`, default 128); the ragged shape
# (batch, per-batch cache lengths, per-batch Q lengths) is the runtime fuzz
# axis. B200-only (SM100 MLADispatchScalarArgs + tuned decode dispatch).
mojo_test(
    name = "fuzz_mla_decode.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_mla_decode.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "8",
    },
    main = "fuzz_mla_decode.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = [
        "//:has_gpu",
        "//:b200_gpu",
    ],
    deps = [
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:linalg",
        "//max:nn",
        "//max:structured_kernels",
        "@mojo//:std",
    ],
)

# Target: fused MLA RoPE + KV-cache RMSNorm + quantize-write
# (`mla_fused_rope_rmsnorm_quantization` -> `fused_rope_rmsnorm_quantization_kernel`,
# the DeepSeek/Kimi prefill op with no isolated unit test). The ragged shape
# (batch, per-batch cache lengths driving `post_seq_idx`, per-batch new-token
# counts) is the runtime fuzz axis; num_q_heads is compile-time
# (`-D frrq_num_heads=128|64|16`, default 16). memory-safety primary; `ref`
# (--check 1) verifies the dense roped query AND the paged K-cache writes.
mojo_test(
    name = "fuzz_fused_rope_rmsnorm.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_fused_rope_rmsnorm.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "8",
    },
    main = "fuzz_fused_rope_rmsnorm.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:kv_cache",
        "//max:linalg",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Minimal repro probe for the decode-path hang found by the Slice 0 fuzzer.
# `num_keys` / `valid_length` come from argv (`--test_arg=`), so one build probes
# many configs. Tagged `manual` (a hanging config TIMES OUT by design).
mojo_test(
    name = "repro_decode_hang.mojo.test",
    size = "small",
    srcs = ["repro_decode_hang.mojo"],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: MoE moe_create_indices (uninitialized-read oracle: initcheck/poison).
mojo_test(
    name = "fuzz_moe_indices.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_moe_indices.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_moe_indices.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: softmax _softmax_gpu (memory-safety oracle: memcheck/redzone).
mojo_test(
    name = "fuzz_softmax.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_softmax.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_softmax.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: rms_norm rms_norm_gpu (memory-safety oracle; fully runtime-shapeable).
mojo_test(
    name = "fuzz_rms_norm.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_rms_norm.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_rms_norm.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: layer_norm layer_norm_gpu (memory-safety + numerical ref oracle).
mojo_test(
    name = "fuzz_layer_norm.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_layer_norm.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_layer_norm.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: block-scaled FP4 SM100 matmul small_bn (thin wrapper over the testbed).
# B200-only. memcheck+pool-off surfaces a small_bn scale-factor over-read across
# fuzzed M.
mojo_test(
    name = "fuzz_block_scaled_fp4.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_block_scaled_fp4.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_block_scaled_fp4.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = [
        "//:has_gpu",
        "//:b200_gpu",
    ],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "//max:structured_kernels",
        "@mojo//:std",
    ],
)

# Target: token sampler `fused_token_sampling_gpu` (the production top-k+top-p
# sampling op). Two oracles: (1) a validity contract that every sampled
# out_idxs is in [0, vocab) -- a negative / out-of-range token id is FAIL; and
# (2) memory-safety on a FRESH int64 output buffer, so an UNWRITTEN row surfaces
# under initcheck/memcheck or poison (0xFF -> large negative token id).
# Covers three distinct bugs (all hardware-independent control-flow gaps):
#  - gumbel path (top_k=-1, the served greedy config): an all-NaN logits row
#    makes the argmax (TopK_2 seeded p=-1, u=-Inf) match no element > -Inf, so
#    it emits index -1 (logit_sign=3). This is the production negative-token id.
#  - gumbel temperature=0 unclamped divide (apply_gumbel_noise_kernel) on an
#    all-<=0 row -> all -Inf -> index -1 (logit_sign=1, temp=0).
#  - _topk_stage2 per-row top_k == 0 (k_lo=0) -> output row never written (the
#    Python per-row top_k tensor path is not normalized).
mojo_test(
    name = "fuzz_topk_sampling.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_topk_sampling.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_topk_sampling.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:nn",
        "@mojo//:std",
    ],
)

# Target: EP MoE combine `send_tokens_back` write-offset containment.
# Runs a real single-GPU dispatch, overwrites `src_info` with a fuzzed
# (valid/boundary/off-by-one/garbage/-1/INT32_MAX) distribution, then runs
# `combine_async`. Under memcheck/redzone the unvalidated write offset OOBs
# (FAIL pre-fix); the src_info sentinel + bounds-check containment makes it PASS.
mojo_test(
    name = "fuzz_ep_combine.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_ep_combine.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_ep_combine.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:linalg",
        "//max:nn",
        "//max:shmem",
        "@mojo//:std",
    ],
)

# Target: `block_select_topk` -- the MiniMax-M3 sparse-attention (MSA) indexer's
# block-selection core (shared by the prefill + decode indexer phases). A test
# launcher runs one CTA per score row; we fuzz the shape (num_rows, num_blocks,
# k), the launch width (block_dim), and the score distribution. Two oracles: a
# VALIDITY CONTRACT (always on: in-range / distinct / -1-tail / no-winner -> all
# -1, on a fresh -2-poisoned int32 output + an OOB scores guard) and `ref`
# (--check: the top-k correctness invariant). Hardware-independent (no SM100),
# so it runs on any non-Apple GPU.
mojo_test(
    name = "fuzz_sparse_indexer.mojo.test",
    size = "large",
    srcs = [
        "_fuzz.mojo",
        "fuzz_sparse_indexer.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "4",
    },
    main = "fuzz_sparse_indexer.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "//max:internal_utils",
        "//max:nn",
        "@mojo//:std",
    ],
)

# OOB canary: the positive control for the fuzz-oracle pipeline. Driven by the
# orchestrator under --oracle redzone/memcheck it reports FAIL (detects the
# planted OOB write); under --oracle diff it reports PASS (the pool masks it).
# Tagged `manual` (it writes OOB on purpose).
mojo_test(
    name = "fuzz_oob_canary.mojo.test",
    size = "small",
    srcs = [
        "_fuzz.mojo",
        "fuzz_oob_canary.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    main = "fuzz_oob_canary.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "@mojo//:std",
    ],
)

# Numeric canary: the positive control for the numerical (`ref`) oracle. Under
# --oracle ref it FAILs on even n (a deliberate shape-dependent wrong answer)
# and PASSes on odd n; under --oracle diff it PASSes (the wrong value is never
# checked) -- proving the ref oracle catches what memory/diff oracles miss.
mojo_test(
    name = "fuzz_numeric_canary.mojo.test",
    size = "small",
    srcs = [
        "_fuzz.mojo",
        "fuzz_numeric_canary.mojo",
    ],
    exec_properties = {
        "test.resources:gpu-memory": "2",
    },
    main = "fuzz_numeric_canary.mojo",
    tags = [
        "gpu",
        "manual",
    ],
    target_compatible_with = ["//:has_gpu"],
    deps = [
        "@mojo//:std",
    ],
)

# Python orchestrator: build, enumerate, run-per-case, classify, shrink, corpus,
# replay. Registered targets invoke the per-kernel mojo_test binaries above.
modular_py_binary(
    name = "fuzz",
    testonly = True,
    srcs = ["fuzz.py"],
    main = "fuzz.py",
    tags = ["manual"],
)
